# CloudEngine

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  imgui.ini
.cache/clangd/index/: camera.cpp.7DE7186BC578DDC9.idx  camera.cpp.7FAA553F6F6124D5.idx  camera.h.AF6B4A11E13C059E.idx  camera.h.FEC6F845C572F8B8.idx  component.h.87FFE8A4C864C541.idx  component.h.E5343DF747D92CFB.idx  core.h.9339CA1BCB8EF1EA.idx  core.h.D6E4ABABFC04C3CF.idx  entry.cpp.CB6F997F2DBCBFE9.idx  entry.cpp.D7AC14F850BB22A2.idx  entry.cpp.DD51225D21D511F2.idx  entry.h.0917362EA80B26BF.idx  entry.h.49CB9A825C63A244.idx  entry.h.EB6E983916895533.idx  entry.hpp.89C0CBED7F4115D2.idx  gl.c.6FF5954C96E9EC2A.idx  gl.h.4C44FC414092AEDD.idx  glfw.cpp.5EE4107CD579BFA5.idx  impl_glfw.cpp.0B0B8F54A0306C48.idx  impl_glfw.cpp.475CF49A6CFA8601.idx  input.cpp.6472EAA1E9EC0A98.idx  input.cpp.D0FE4951DE42D6C3.idx  input.h.A12E5DF80BD9ABB9.idx  input.h.D1A56281279BDA6A.idx  khrplatform.h.E8565FDAC1DC571C.idx  light.h.2F49B8B8B900A990.idx  light.h.B56DC3C6BF7FE790.idx  main.cpp.298CC2A7143DBAE3.idx  main.cpp.8AB7A0D5D0A83202.idx  main.cpp.FF164EF8B2211A00.idx  main.frag.16B71C29F73B9830.idx  main.frag.87E3CD1FC58C07E6.idx  main.vert.1A891517C4BAC9D6.idx  main.vert.A765582C124EF9A9.idx  mesh.h.1ED563F90F1D103E.idx  mesh.h.5A331DD14B328F1F.idx  mesh_renderer.h.48A9D62C13965F35.idx  mesh_renderer.h.9FFA39F7D4CC5DD7.idx  model.h.06D6BA8478CDF103.idx  model.h.478D2F54C964A0ED.idx  (+54 more)
CloudEngine/: SCSub
CloudEngine/core/: entry.cpp  entry.h  input.cpp  logger.cpp  logger.h  main.cpp  time.cpp  utils.h  vector.h
CloudEngine/core/graphics/: framebuffer.h  glfw.cpp  mesh.h  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.h
CloudEngine/core/registry/: component_registry.cpp  component_registry.h  node_registry.cpp  node_registry.h
CloudEngine/core/scene/: component.h  node.cpp  node.h  scene.cpp  scene.h
CloudEngine/platform/OpenGL/: opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_mesh.cpp  opengl_mesh.h  opengl_model.cpp  opengl_model.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp  sandbox.cpp  sandbox.h
backends/OpenGL/: CMakeLists.txt  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_mesh.cpp  opengl_mesh.h  opengl_model.cpp  opengl_model.h  opengl_renderer.cpp  opengl_renderer.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h
backends/OpenGL/shaders/: main.frag
core/: CMakeLists.txt
core/include/CloudEngine/: entry.h  logger.h  renderer.h  utils.h  vec.h
core/src/: entry.cpp  logger.cpp  main.cpp  time.cpp  utils.cpp
core/src/graphics/: glfw.cpp  renderer.cpp  shader.cpp
core/src/registry/: component_registry.cpp  node_registry.cpp
core/src/scene/: node.cpp  scene.cpp
editor/: CMakeLists.txt
editor/include/CloudEngine/editor/: editor_ui_manager.h  editor_window.h  export_manager.h
editor/include/CloudEngine/editor/registry/: export_registry.h
editor/include/CloudEngine/editor/ui/: inspector_component.h
editor/src/: editor_ui_manager.cpp  entry.cpp  entry.h  export_manager.cpp  utils.h
editor/src/components/: test_component.h
editor/src/registry/: export_registry.cpp
editor/src/ui/: console.cpp  console.h  inspector_components.cpp  inspector_components.h  node_inspector.cpp  node_inspector.h  scene_explorer.cpp  scene_explorer.h  scene_explorer.hpp  scene_view.cpp  scene_view.h
ext/glad/: CMakeLists.txt
ext/glad2/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/imgui/include/imgui/backends/: imgui_impl_glfw.h  imgui_impl_opengl3.h
ext/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
ext/imgui/src/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
ext/stb/: CMakeLists.txt
include/CloudEngine/: core.h  entry.h  input.h  renderer.h  time.h  vec.h  window.h
include/CloudEngine/graphics/: mesh.h  (+3 more)
src/: input.cpp  main.cpp  utils.cpp  utils.h
src/graphics/: impl_glfw.cpp  renderer.cpp  shader.cpp  window.cpp
src/render/: impl_glfw.cpp
src/scene/: scene.cpp
(+48 files in other folders)
